src/objects/Wowcher_Deal_Region__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Deal_Analyst_1__c</fullName>
        <label>Deal Analyst 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Deal_Analyst_2__c</fullName>
        <label>Deal Analyst 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Deal_Analyst_3__c</fullName>
        <label>Deal Analyst 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Deal_Analyst_CC__c</fullName>
        <defaultValue>&apos;orderforms@wowcher.co.uk&apos;</defaultValue>
        <label>Deal Analyst CC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Deal_Region__c</fullName>
        <label>Deal Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_CC__c</fullName>
        <defaultValue>&apos;merchants@wowcher.co.uk&apos;</defaultValue>
        <label>Merchant CC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Merchant_Liaison__c</fullName>
        <label>Merchant Liaison</label>
        <type>Email</type>
    </fields>
    <label>Wowcher Deal Region</label>
</CustomObject>